# trmnl-tides

./: .bumpversion.toml  .copier-answers.yml  .pre-commit-config.yaml  .ruff.toml  .talismanrc  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
docs/: api.rst  index.rst
run_scripts/: start_module.sh
src/trmnl_tides/: __init__.py  __main__.py  cli.py  tides_data.py  update_trmnl.py  weather_data.py
tests/: test_tides_data.py
